<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="log_out">Log out</string>
    <string name="user_image">User image</string>
    <string name="compose">Compose</string>
    <string name="share_button">Share button</string>
    <string name="like_button">Like button</string>
    <string name="retweet_button">Retweet button</string>
    <string name="comment_button">Comment button</string>
    <string name="like">like</string>

</resources>