<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/user_image" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toStartOf="@+id/tvTimeStamp"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="rpandey923" />

    <TextView
        android:id="@+id/tvTimeStamp"
        tools:text="7d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/tvScreenName"
        tools:text="Hello this is my sample tweet" />

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:contentDescription="@string/comment_button"
        android:focusable="true"
        android:outlineProvider="none"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintEnd_toStartOf="@+id/btnRetweet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImage"
        app:srcCompat="@android:drawable/sym_action_chat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRetweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:contentDescription="@string/retweet_button"
        android:focusable="true"
        android:outlineProvider="none"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintEnd_toStartOf="@+id/btnLike"
        app:layout_constraintStart_toEndOf="@+id/btnComment"
        app:layout_constraintTop_toBottomOf="@+id/previewImage"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:contentDescription="@string/like_button"
        android:focusable="true"
        android:outlineProvider="none"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/etCompose"
        app:layout_constraintEnd_toStartOf="@+id/btnShare"
        app:layout_constraintStart_toEndOf="@+id/btnRetweet"
        app:layout_constraintTop_toBottomOf="@+id/previewImage"
        app:srcCompat="@android:drawable/gallery_thumb" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:contentDescription="@string/share_button"
        android:focusable="true"
        android:outlineProvider="none"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLike"
        app:layout_constraintTop_toBottomOf="@+id/previewImage"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <EditText
        android:id="@+id/etCompose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/what_s_happening"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:visibility="gone"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>