<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#F5F8FA">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/user_image"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toStartOf="@+id/tvTimeStamp"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="rpandey923"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvTimeStamp"
        tools:text="7d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/tvScreenName"
        tools:text="Hello this is my sample tweet"
        android:textColor="#14171A"
        android:autoLink="all" />

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#14171A"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:contentDescription="@string/comment_button"
        android:focusable="true"
        android:outlineProvider="none"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRetweet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRetweetCount"
        app:srcCompat="@android:drawable/sym_action_chat"
        android:textColor="#14171A"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRetweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/retweet_button"
        android:focusable="true"
        android:outlineProvider="none"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFavorite"
        app:layout_constraintStart_toEndOf="@+id/btnComment"
        app:srcCompat="@android:drawable/arrow_up_float"
        android:textColor="#14171A"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/like_button"
        android:focusable="true"
        android:outlineProvider="none"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnShare"
        app:layout_constraintStart_toEndOf="@+id/btnRetweet"
        app:srcCompat="@android:drawable/gallery_thumb"
        android:textColor="#14171A"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/share_button"
        android:focusable="true"
        android:outlineProvider="none"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFavorite"
        app:srcCompat="@android:drawable/ic_menu_share"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/tvHour"
        app:layout_constraintTop_toBottomOf="@+id/previewImage"
        tools:text="6/6/2022"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="8:12 AM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImage"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvRetweetCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHour"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvRetweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="Retweets"
        app:layout_constraintStart_toEndOf="@+id/tvRetweetCount"
        app:layout_constraintTop_toBottomOf="@+id/tvHour"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvQuoteTweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="Quote Tweets"
        app:layout_constraintStart_toEndOf="@+id/tvQuoteTweetCount"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvQuoteTweetCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="53"
        app:layout_constraintStart_toEndOf="@+id/tvRetweets"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="Likes"
        app:layout_constraintStart_toEndOf="@+id/tvLikesCount"
        app:layout_constraintTop_toBottomOf="@+id/tvTwitterAndroid"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvLikesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="9,584"
        app:layout_constraintStart_toEndOf="@+id/tvQuoteTweets"
        app:layout_constraintTop_toBottomOf="@+id/tvTwitterAndroid"
        android:textColor="#14171A"/>

    <TextView
        android:id="@+id/tvTwitterAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="Twitter for Android"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/previewImage"
        android:textColor="#14171A"/>
</androidx.constraintlayout.widget.ConstraintLayout>